--- a/main.html
+++ b/main.html
@@ -3,13 +3,15 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<div>
+    <button data-ns-test="block-inline-button">Test1</button>
+    <button data-ns-test="block-inline-button">Test2</button>
+</div>
+    
 
 </body>
 
