--- a/main.html
+++ b/main.html
@@ -1,18 +1,70 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    .block {
+      display: block;
+    }
 
+    .inline {
+      display: inline;
+    }
+  </style>
+  <title>Block or Inline Elements</title>
+</head>
 <body>
-	<div>
-    <button data-ns-test="block-inline-button">Test1</button>
-    <button data-ns-test="block-inline-button">Test2</button>
+
+<div class="block" data-ns-test="block-inline-button">
+  <button class="inline">Test1</button>
+  <button class="inline">Test2</button>
 </div>
-    
+
+<div class="block" data-ns-test="block-inline-div">
+  <div class="block">Test1</div>
+  <div class="block">Test2</div>
+</div>
+
+<div class="inline" data-ns-test="block-inline-span">
+  <span class="inline">Test1</span>
+  <span class="inline">Test2</span>
+</div>
+
+<div class="block" data-ns-test="block-inline-p">
+  <p class="block">Test1</p>
+  <p class="block">Test2</p>
+</div>
+
+<div class="inline" data-ns-test="block-inline-input">
+  <input class="inline" type="text" value="Test1">
+  <input class="inline" type="text" value="Test2">
+</div>
+
+<div class="inline" data-ns-test="block-inline-cite">
+  <cite class="inline">Test1</cite>
+  <cite class="inline">Test2</cite>
+</div>
+
+<div class="inline" data-ns-test="block-inline-code">
+  <code class="inline">Test1</code>
+  <code class="inline">Test2</code>
+</div>
+
+<div class="block" data-ns-test="block-inline-h1">
+  <h1 class="block">Test1</h1>
+  <h1 class="block">Test2</h1>
+</div>
+
+<div class="inline" data-ns-test="block-inline-sup">
+  <sup class="inline">Test1</sup>
+  <sup class="inline">Test2</sup>
+</div>
+
+<div class="inline" data-ns-test="block-inline-sub">
+  <sub class="inline">Test1</sub>
+  <sub class="inline">Test2</sub>
+</div>
 
 </body>
-
 </html>
