--- a/main.html
+++ b/main.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    .block {
-      display: block;
-    }
-
-    .inline {
-      display: inline;
-    }
-  </style>
+ 
   <title>Block or Inline Elements</title>
 </head>
 <body>
