--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
    <title>Block or Inline Elements</title>
 </head>
 <body>
-<button data-ns-test="Inline"> test 1</button>
+<button data-ns-test="block-inline-button"> test 1</button>
 	Answer: Inline
 	<button> test 2</button>
 	<div> test 1</div>
