--- a/main.html
+++ b/main.html
@@ -4,9 +4,11 @@
    <title>Block or Inline Elements</title>
 </head>
 <body>
-<button data-ns-test="block-inline-button"> test 1</button>
+<div><button data-ns-test="block-inline-button"> test 1</button>
+	
+	<button data-ns-test="block-inline-button"> test 2</button>
 	Answer: Inline
-	<button> test 2</button>
+	
 	<div> test 1</div>
 	<div>test 2</div>
 	<span> test 1</span>
@@ -19,12 +21,12 @@
 	<cite>test 2</cite>
 	<code>test 1</code>
     <code>test 2</code>
-    <hi>test 1</hi>
+    <h1>test 1</h1>
 	<h1>test 2</h1>
     <sup>test 1</sup>
     <sup>test 2</sup>
 	<sub>test 1</sub>
 	<sub> test 2</sub>
-	
+	</div>
 </body>
 </html>
