--- a/main.html
+++ b/main.html
@@ -4,8 +4,8 @@
    <title>Block or Inline Elements</title>
 </head>
 <body>
-<div><button data-ns-test="block-inline-button"> test 1</button>
-	<button data-ns-test="block-inline-button"> test 2</button>
+<div><button data-ns-test="block-inline-button">Test1</button>
+	<button data-ns-test="block-inline-button">Test2</button>
 	Answer:Inline
 	<div> test 1</div>
 	<div>test 2</div>
