--- a/main.html
+++ b/main.html
@@ -1,30 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Block or Inline Elements</title>
+	
 </head>
 <body>
-<div><button data-ns-test="block-inline-button">Test1</button>
-	<button data-ns-test="block-inline-button">Test2</button>
-	Answer:Inline
-	<div> test 1</div>
-	<div>test 2</div>
-	<span> test 1</span>
-	<span> test 2</span>
-	<p>test 1</p>
-	<p>test 2</p>
-	<input> test 1</input>
-	<input> test 2</input>
-    <cite>test 1</cite>
-	<cite>test 2</cite>
-	<code>test 1</code>
-    <code>test 2</code>
-    <h1>test 1</h1>
-	<h1>test 2</h1>
-    <sup>test 1</sup>
-    <sup>test 2</sup>
-	<sub>test 1</sub>
-	<sub> test 2</sub>
-	</div>
+
+<div class="block" data-ns-test="block-inline-button">
+  <button class="inline">Test1</button>
+  <button class="inline">Test2</button>
+</div>
+
+<div class="block" data-ns-test="block-inline-div">
+  <div class="block">Test1</div>
+  <div class="block">Test2</div>
+</div>
+
+<div class="inline" data-ns-test="block-inline-span">
+  <span class="inline">Test1</span>
+  <span class="inline">Test2</span>
+</div>
+
+<div class="block" data-ns-test="block-inline-p">
+  <p class="block">Test1</p>
+  <p class="block">Test2</p>
+</div>
+
+<div class="inline" data-ns-test="block-inline-input">
+  <input class="inline" type="text" value="Test1">
+  <input class="inline" type="text" value="Test2">
+</div>
+
+<div class="inline" data-ns-test="block-inline-cite">
+  <cite class="inline">Test1</cite>
+  <cite class="inline">Test2</cite>
+</div>
+
+<div class="inline" data-ns-test="block-inline-code">
+  <code class="inline">Test1</code>
+  <code class="inline">Test2</code>
+</div>
+
+<div class="block" data-ns-test="block-inline-h1">
+  <h1 class="block">Test1</h1>
+  <h1 class="block">Test2</h1>
+</div>
+
+<div class="inline" data-ns-test="block-inline-sup">
+  <sup class="inline">Test1</sup>
+  <sup class="inline">Test2</sup>
+</div>
+
+<div class="inline" data-ns-test="block-inline-sub">
+  <sub class="inline">Test1</sub>
+  <sub class="inline">Test2</sub>
+</div>
+
 </body>
 </html>
