--- a/main.html
+++ b/main.html
@@ -5,29 +5,30 @@
 </head>
 <body>
 
-<div class="block" data-ns-test="block-inline-button">
-  <button class="inline">Test1</button>
-  <button class="inline">Test2</button>
+<div  data-ns-test="block-inline-button">
+  <button data-ns-test="inline">Test1</button>
+  <button data-ns-test="inline">Test2</button>
 </div>
+   Answer:Inline
 
-<div class="block" data-ns-test="block-inline-div">
-  <div class="block">Test1</div>
-  <div class="block">Test2</div>
+	<div  data-ns-test="block-inline-div">
+  <div data-ns-test="block">Test1</div>
+  <div data-ns-test="block">Test2</div>
 </div>
 
 <div class="inline" data-ns-test="block-inline-span">
-  <span class="inline">Test1</span>
-  <span class="inline">Test2</span>
+  <span data-ns-test="inline">Test1</span>
+  <span data-ns-test="inline">Test2</span>
 </div>
 
 <div class="block" data-ns-test="block-inline-p">
-  <p class="block">Test1</p>
-  <p class="block">Test2</p>
+  <p data-ns-test="block">Test1</p>
+  <p data-ns-test="block">Test2</p>
 </div>
 
 <div class="inline" data-ns-test="block-inline-input">
-  <input class="inline" type="text" value="Test1">
-  <input class="inline" type="text" value="Test2">
+  <input data-ns-test="inline" type="text" value="Test1">
+  <input data-ns-test="inline" type="text" value="Test2">
 </div>
 
 <div class="inline" data-ns-test="block-inline-cite">
