--- a/main.html
+++ b/main.html
@@ -6,8 +6,9 @@
 <body>
 
 <div  data-ns-test="block-inline-button">
-  <button data-ns-test="inline">Test1</button>
-  <button data-ns-test="inline">Test2</button>
+  <button data-ns-test="inline">Test1</button></div>
+	Answer:Inline
+ <div> <button data-ns-test="inline">Test2</button>
 </div>
    Answer:Inline
 
