--- a/main.html
+++ b/main.html
@@ -6,11 +6,61 @@
 <body>
 
 <div  data-ns-test="block-inline-button">
-  <button data-ns-test="inline">Test1</button></div>
- <div> <button data-ns-test="inline">Test2</button>
+  <button data-ns-test="Inline">Test1</button></div>
+ <div> <button data-ns-test="Inline">Test2</button>
 </div>
    Answer:Inline
-
 	
+<div  data-ns-test="block-inline-div">Test1</div>
+ <div data-ns-test="block-inline-div">Test2
+</div> 
+   Answer:Block
+	
+	<div  data-ns-test="block-inline-span">
+  <span  data-ns-test="Inline">Test1</span ></div>
+ <div> <span data-ns-test="Inline">Test2</span >
+</div>
+   Answer:Inline
+	
+	<div  data-ns-test="block-inline-p">
+  <p data-ns-test="Block">Test1</p></div>
+ <div> <p data-ns-test="Block">Test2</p>
+</div>
+   Answer:Block
+	
+	<div  data-ns-test="block-inline-input">
+  <input data-ns-test="inline">Test1</input></div>
+ <div> <input data-ns-test="inline">Test2</input>
+</div>
+   Answer:Inline
+	
+	<div  data-ns-test="bloBlock"inline">Test2</cite>
+</div>
+   Answer:Inline
+	
+	<div  data-ns-test="block-inline-code">
+  <code data-ns-test="inline">Test1</code></div>
+ <div> <code data-ns-test="inline">Test2</code>
+</div>
+   Answer:Inline
+	
+	<div  data-ns-test="block-inline-h1">
+  <h1 data-ns-test="Block">Test1</h1></div>
+ <div> <h1 data-ns-test="iBlock">Test2</h1>
+</div>
+   Answer:Block
+	
+	<div  data-ns-test="block-inline-sup">
+  <sup data-ns-test="inline">Test1</sup></div>
+ <div> <sup data-ns-test="inline">Test2</sup>
+</div>
+   Answer:Inline
+	
+	<div  data-ns-test="block-inline-sub">h
+  <sub data-ns-test="inline">Test1</sub></div>
+ <div> <sub data-ns-test="inline">Test2</sub>
+</div>
+   Answer:Inline
+		
 </body>
 </html>
