--- a/main.html
+++ b/main.html
@@ -10,10 +10,10 @@
   <button data-ns-test="block-inline-button">Test2</button>
    Answer:Inline
 </div>
+	
 <div>
 <div  data-ns-test="block-inline-div">Test1</div>
- <div data-ns-test="block-inline-div">Test2
-</div> 
+ <div data-ns-test="block-inline-div">Test2</div> 
    Answer:Block
 </div>
 	
@@ -35,7 +35,8 @@
    Answer:Inline
 	</div>
 	
-	<div ><cite data-ns-test="block-inline-cite">Test1</cite>
+	<div >
+	<cite data-ns-test="block-inline-cite">Test1</cite>
     <cite data-ns-test="block-inline-cite">Test2</cite>
    Answer:Inline
 	</div>
